--- a/board_games.html
+++ b/board_games.html
@@ -10,14 +10,12 @@
     </style>
   </head>
   <body>
-    <table>
-      <tr>
-        <th>Dubeni<th>
-      </tr>
-      <tr>
-        <td>Divadlo</td>
-        <td>Board games</td>
-      </tr>
-    </table>
+    <div>
+      <h1>Dubeni</h1>
+      <ul>
+        <li>Divadlo</li>
+        <li>Board games</li>
+      </ul>
+    </div>
   </body>
 </html>
